# auto_compyute

./: .gitignore  MANIFEST.in  README.md  benchmark.ipynb  diagram.html  graph.html  pyproject.toml  setup.py
.github/workflows/: general.yml  tests.yml
auto_compyute/: __init__.py  array_factory.py  array_functions.py  autograd.py  backends.py  devices.py  dtypes.py  functions.py  node.py  ops.py  tensor.py  tensor_factory.py  tensor_functions.py  tensors.py
auto_compyute/funcs/: __init__.py  binary_funcs.py  function.py  multiary_funcs.py  reduce_funcs.py  shape_funcs.py  unary_funcs.py
auto_compyute/nn/: __init__.py  funcs.py  functional.py  modules.py  ops.py  optimizers.py  utils.py
auto_compyute/ops/: binary_ops.py  movement_ops.py  op.py  reduce_ops.py  unary_ops.py
examples/: VAE.ipynb  cnn.ipynb  example_cnn_mnist.ipynb  example_lstm_air_passengers.ipynb  example_mlp_from_scratch.ipynb  example_transformer_shakespeare.ipynb  mnist.ipynb  transformer.ipynb  variational_autoencoder.ipynb
src/auto_compyute/: __init__.py  autograd.py  backends.py  dtypes.py  tensor_factory.py  tensor_functions.py  viz.py
src/auto_compyute/nn/: modules.py  (+5 more)
tests/: test_binary_funcs.py  test_functions.py  test_reduce_funcs.py  test_shape_funcs.py  test_unary_funcs.py  utils.py
tests/funcs/: __init__.py  test_binary_funcs.py  test_reduce_funcs.py  test_shape_funcs.py  test_unary_funcs.py
tests/nn/: __init__.py
tests/ops/: test_binary_ops.py  test_movement_ops.py  test_reduce_ops.py  test_unary_ops.py
tests/utils/: check.py  init.py  test_factory.py  verifications.py
(+24 files in other folders)
