[project]
name = "auto-compyute"
version = "0.1.1"
description = "Lightweight Autograd Engine in Pure Python"
readme = "README.md"
authors = [{ name = "Daniel Kofler", email = "dkofler@outlook.com" }]
license = { text = "MIT" }
keywords = ["machine-learning", "gpu", "numpy", "autograd", "neural-networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA :: 12",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = ["numpy>=1.26.4", "opt_einsum>=3.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
cuda = ["cupy_cuda12x>=13.0.0"]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "torch>=2.5.0",
]

[project.urls]
Repository = "https://github.com/dakofler/auto_compyute"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F403", "S101"]
select = ["ARG", "C4", "E", "F", "RUF", "S", "SIM", "TC", "W"]
